--- a/index.html
+++ b/index.html
@@ -6,11 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>cliWeather</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<div class="contain my-5 mx-auto">
 
-<script src="script.js"></script>
+    <h1 class="text-muted text-center my-4">cliWeather</h1>
+
+    <form class="change-location my-4 text-center text-muted">
+        <label for="city">Enter Location for weatheri information</label>
+        <input type="text" name="city" class="form-control p-4">
+
+    </form>
+
+</div>
+
+
+<script src="jsFiles/data.js"></script>
+<script src="jsFiles/script.js"></script>
 </body>
 </html>
