Updating UI etc

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         </div>
 
         <div class="text-center text-uppercase text-muted detail">
-            <div class="my-3">City Name</div>
-            <div class="my-3">Weather</div>
-            <div class="display-4 my-3">
+            <h5 class="my-3 cityName">City Name</h5>
+            <h4 class="my-3">Weather</h4>
+            <div class="display-4 my-4">
                 <span>temp</span>
-                <span>&deg;C</span>
+                <p>&deg;C</p>
             </div>
         </div>
 
