Adding Icon & image link

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
         </div>
 
         <div class="text-center text-uppercase text-muted detail">
-        <h5 class="my-3 cityName">City Name</h5>
-        <h4 class="my-3">Weather</h4>
-
+            <!--Api information appears here-->
         </div>
 
         </div>
