Adding logo image on browser Tab and webpage

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>cliWeather</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="img/Icon1.png"/>
 </head>
 <body>
 
 <div class="container my-5 mx-auto">
-
-    <h1 class="text-muted text-center my-4">cliWeather</h1>
+    <img src="/img/Icon1.png" class="icon1">
+   <h1 class="text-muted text-center my-4">cliWeather</h1>
 
     <form class="change-location my-4 text-center text-muted">
         <!--'for' in the lable tag is associated withe 'name' in input tag-->
